[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petakit5d"
version = "0.1.0"
description = "Python tools for petabyte-scale 5D microscopy image processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "Xiongtao Ruan"},
]
maintainers = [
    {name = "Xiongtao Ruan"},
]
keywords = [
    "microscopy",
    "image-processing",
    "5d-imaging",
    "deconvolution",
    "stitching",
    "light-sheet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "tifffile>=2021.0.0",
    "scikit-image>=0.18.0",
]

[project.optional-dependencies]
imagecodecs = [
    "imagecodecs>=2021.0.0",
]
zarr = [
    "zarr>=2.10.0",
    "numcodecs>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
    "ipykernel>=6.0.0",
]
all = [
    "petakit5d[imagecodecs,zarr,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/hkmoon/PetaKit5D"
Documentation = "https://github.com/hkmoon/PetaKit5D/blob/main/README.md"
Repository = "https://github.com/hkmoon/PetaKit5D"
Issues = "https://github.com/hkmoon/PetaKit5D/issues"

[tool.setuptools]
packages = ["petakit5d", "petakit5d.utils", "petakit5d.image_processing", "petakit5d.microscope_data_processing"]

[tool.setuptools.package-data]
petakit5d = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=petakit5d",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["petakit5d"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
