[package]
name = "petakit5drs"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Currently used ---
rustfft = "6.1"       # FFT for B-spline coefficients (image_processing)
tiff = "0.6"          # TIFF read/write (io)
num-traits = "0.2"    # Float trait for generic math
serde = { version = "1.0", features = ["derive"] }  # JSON serialization for ZARR metadata
serde_json = "1.0"    # ZARR .zarray metadata generation
uuid = { version = "1.0", features = ["v4"] }        # UUID generation (utils)
hostname = "0.4"      # System hostname (utils)

# --- Phase 1: image processing (ndarray for N-D arrays, nalgebra for linear algebra) ---
ndarray = "0.15"
nalgebra = "0.32"

# --- Phase 4: point detection spatial queries ---
kdtree = "0.3"

# --- Phase 5: ZARR deep integration ---
zarrs = "0.23.2"

# --- Phase 6: performance and error handling ---
rayon = "1.7"         # Parallel iteration
thiserror = "1.0"     # Derive-based error types

# --- Planned / reserved ---
statrs = "0.16"       # Statistical functions (Gaussian mixture fitting)
rand = "0.8"          # Random number generation (tests, synthetic data)
nshare = "0.10"       # Array sharing between ndarray and nalgebra

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking
